deterministic_inference_run.20251109-003540.stdout
  File "C:\Users\loweb\AI_Financial_Sims\HO\HO 1st time 5080\deterministic_inference.py", line 1
    <PASTE_PY_CONTENT>
    ^
SyntaxError: invalid syntax
